--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">task101</string>
+    <string name="facebook_app_id">550996082872601</string>
+    <string name="fb_login_protocol_scheme">fb550996082872601</string>
 </resources>
